feat: fetch result from other node if necessary